--- a/package.json
+++ b/package.json
@@ -44,10 +44,8 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/register": "^7.14.5",
-    "@formatjs/ts-transformer": "^3.4.5",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "babel-plugin-formatjs": "^10.3.2",
     "babel-plugin-import": "^1.13.3",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-react-intl": "^8.2.25",
@@ -102,6 +100,7 @@
     "history": "^5.0.0",
     "immer": "^9.0.5",
     "intl": "^1.2.5",
+    "invariant": "^2.2.4",
     "ip": "^1.1.5",
     "lodash": "^4.17.21",
     "minimist": "^1.2.5",
