--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "image-webpack-loader": "^7.0.1",
+    "less-loader": "^10.0.1",
     "lint-staged": "^11.1.1",
     "offline-plugin": "^5.0.7",
     "pre-commit": "^1.2.2",
@@ -80,7 +81,6 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "svg-url-loader": "^7.1.1",
     "terser-webpack-plugin": "^5.1.4",
-    "ts-loader": "^9.2.3",
     "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.45.1",
