--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "ngrok": "^4.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-intl": "^2.9.0",
